--- a/src/scss/variables-generic.scss
+++ b/src/scss/variables-generic.scss
@@ -26,18 +26,18 @@ $black:    #000 !default;
 $grays: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $grays: map-merge(
-                (
-                        "100": $gray-100,
-                        "200": $gray-200,
-                        "300": $gray-300,
-                        "400": $gray-400,
-                        "500": $gray-500,
-                        "600": $gray-600,
-                        "700": $gray-700,
-                        "800": $gray-800,
-                        "900": $gray-900
-                ),
-                $grays
+        (
+            "100": $gray-100,
+            "200": $gray-200,
+            "300": $gray-300,
+            "400": $gray-400,
+            "500": $gray-500,
+            "600": $gray-600,
+            "700": $gray-700,
+            "800": $gray-800,
+            "900": $gray-900
+        ),
+        $grays
 );
 
 
@@ -55,22 +55,22 @@ $cyan:    #17a2b8 !default;
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
-                (
-                        "blue":       $blue,
-                        "indigo":     $indigo,
-                        "purple":     $purple,
-                        "pink":       $pink,
-                        "red":        $red,
-                        "orange":     $orange,
-                        "yellow":     $yellow,
-                        "green":      $green,
-                        "teal":       $teal,
-                        "cyan":       $cyan,
-                        "white":      $white,
-                        "gray":       $gray-600,
-                        "gray-dark":  $gray-800
-                ),
-                $colors
+        (
+            "blue":       $blue,
+            "indigo":     $indigo,
+            "purple":     $purple,
+            "pink":       $pink,
+            "red":        $red,
+            "orange":     $orange,
+            "yellow":     $yellow,
+            "green":      $green,
+            "teal":       $teal,
+            "cyan":       $cyan,
+            "white":      $white,
+            "gray":       $gray-600,
+            "gray-dark":  $gray-800
+        ),
+        $colors
 );
 
 $primary:       $color-one !default;
@@ -85,17 +85,17 @@ $dark:          $gray-800 !default;
 $theme-colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $theme-colors: map-merge(
-                (
-                        "primary":    $primary,
-                        "secondary":  $secondary,
-                        "success":    $success,
-                        "info":       $info,
-                        "warning":    $warning,
-                        "danger":     $danger,
-                        "light":      $light,
-                        "dark":       $dark
-                ),
-                $theme-colors
+        (
+            "primary":    $primary,
+            "secondary":  $secondary,
+            "success":    $success,
+            "info":       $info,
+            "warning":    $warning,
+            "danger":     $danger,
+            "light":      $light,
+            "dark":       $dark
+        ),
+        $theme-colors
 );
 
 // Set a specific jump point for requesting color jumps
@@ -132,29 +132,29 @@ $spacer: 1rem !default;
 $spacers: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $spacers: map-merge(
-                (
-                        0: 0,
-                        1: ($spacer * .25),
-                        2: ($spacer * .5),
-                        3: $spacer,
-                        4: ($spacer * 1.5),
-                        5: ($spacer * 3)
-                ),
-                $spacers
+        (
+            0: 0,
+            1: ($spacer * .25),
+            2: ($spacer * .5),
+            3: $spacer,
+            4: ($spacer * 1.5),
+            5: ($spacer * 3)
+        ),
+        $spacers
 );
 
 // This variable affects the `.h-*` and `.w-*` classes.
 $sizes: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $sizes: map-merge(
-                (
-                        25: 25%,
-                        50: 50%,
-                        75: 75%,
-                        100: 100%,
-                        auto: auto
-                ),
-                $sizes
+        (
+            25: 25%,
+            50: 50%,
+            75: 75%,
+            100: 100%,
+            auto: auto
+        ),
+        $sizes
 );
 
 // Body
@@ -186,11 +186,11 @@ $paragraph-margin-bottom:   1rem !default;
 // adapting to different screen sizes, for use in media queries.
 
 $grid-breakpoints: (
-        xs: 0,
-        sm: 576px,
-        md: 768px,
-        lg: 992px,
-        xl: 1200px
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px
 ) !default;
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
@@ -202,10 +202,10 @@ $grid-breakpoints: (
 // Define the maximum width of `.container` for different screen sizes.
 
 $container-max-widths: (
-        sm: 100%,  // 540px,
-        md: 980px, // 720px
-        lg: 960px,
-        xl: 1200px // 1140px
+    sm: 100%,  // 540px,
+    md: 980px, // 720px
+    lg: 960px,
+    xl: 1200px // 1140px
 ) !default;
 
 @include _assert-ascending($container-max-widths, "$container-max-widths");
@@ -565,7 +565,7 @@ $custom-file-box-shadow:            $input-box-shadow !default;
 $custom-file-button-color:          $custom-file-color !default;
 $custom-file-button-bg:             $input-group-addon-bg !default;
 $custom-file-text: (
-        en: "Browse"
+    en: "Browse"
 ) !default;
 
 
@@ -713,7 +713,7 @@ $jumbotron-bg:                      $gray-200 !default;
 $card-spacer-y:                     .75rem !default;
 $card-spacer-x:                     1.25rem !default;
 $card-border-width:                 $border-width !default;
-$card-border-radius:                $border-radius !default;
+$card-border-radius:                0 !default;
 $card-border-color:                 rgba($black, .125) !default;
 $card-inner-border-radius:          calc(#{$card-border-radius} - #{$card-border-width}) !default;
 $card-cap-bg:                       rgba($black, .03) !default;
@@ -900,7 +900,7 @@ $breadcrumb-divider-color:          $gray-600 !default;
 $breadcrumb-active-color:           $gray-600 !default;
 $breadcrumb-divider:                quote("/") !default;
 
-$breadcrumb-border-radius:          $border-radius !default;
+$breadcrumb-border-radius:          0 !default;
 
 
 // Carousel
